# rest-api-tui

./: ARCHITECTURE.md  BUGFIXES.md  BUGFIX_Y_AXIS_SCALE.md  CHEATSHEET.md  COLLAPSIBLE_SECTIONS.md  COLLECTION_MANAGEMENT.md  COMPARISON_WITH_POSTMAN.md  COPY_TO_CLIPBOARD.md  Cargo.toml  DEBUG_JSON.md  DELETE_CONFIRMATION.md  DEMO_FLOW_DIAGRAM.txt  DEMO_PRESENTATION.md  DEMO_QUICK_REFERENCE.md  DEMO_README.md  DEMO_SCRIPT.md  DEMO_SUMMARY.md  DEVELOPER.md  DOCUMENTATION_SUMMARY.md  ERGONOMIC_IMPROVEMENTS.md  FAKER_FEATURE.md  FEATURES_IMPLEMENTED.md  FEATURE_SUMMARY.md  HEADERS_AND_AUTH.md  IMPLEMENTATION_SUMMARY.md  JSON_EXAMPLE.md  JSON_SYNTAX_HIGHLIGHTING.md  LOAD_TEST_BUG.md  LOAD_TEST_CONFIG_COMPLETE.md  LOAD_TEST_FIX.md  NETWORK_TRAFFIC.md  NEW_LAYOUT.md  PROGRESS.md  QUICKSTART.md  QUICK_EXECUTE_FEATURE.md  QUICK_IMPROVEMENTS.md  QUICK_REFERENCE.md  README.md  REGRESSION_FIX.md  SCROLLABLE_HEADERS.md  (+17 more)
examples/: collection_management_demo.rs  formatter_demo.rs  full_app_demo.rs  http_demo.rs  load_test_visual_demo.rs  metrics_demo.rs  storage_demo.rs  template_demo.rs
src/: app.rs  faker.rs  formatter.rs  http.rs  lib.rs  load_test.rs  main.rs  models.rs  storage.rs  template.rs  tui.rs  tui_app.rs  variables.rs
src/tui/: app.rs  ui.rs
